--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ hr {
     color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
+    font-size: 20px;
 }
 
 .navigation .nav-brand {
